# ImageCompletion_CG_ZJU

./: CMakeLists.txt  OpenCvUtility.cpp  OpenCvUtility.h  Photometric.cpp  Photometric.h  PointManager.cpp  PointManager.h  README.md  StructurePropagation.cpp  StructurePropagation.h  TextureCompletion.cpp  TextureCompletion.h  main.cpp  stdafx.cpp  stdafx.h
Texture/: Texture.vcxproj  Texture.vcxproj.filters  TextureCompletion.cpp
Texture/list/: plist1.txt  plist3.txt  plist4.txt
Texture/report/: Optimization for Texture Propagation.md
Texture/x64/Debug/: vc141.idb
Texture/x64/Debug/Texture.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Texture.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Texture2/: Note.md
report/: Optimization for Texture Propagation.md  priority.pptx
